# perfume

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
project/osx/perfume.xcodeproj/: project.pbxproj
project/osx/perfume.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
project/osx/perfume.xcodeproj/project.xcworkspace/xcuserdata/nobuo.xcuserdatad/: UserInterfaceState.xcuserstate
project/osx/perfume.xcodeproj/xcuserdata/nobuo.xcuserdatad/xcschemes/: perfume.xcscheme  xcschememanagement.plist
project/unix/: Makefile
project/win32/: perfume.sln  perfume.vcxproj  perfume.vcxproj.filters
src/: bvh.cpp  bvh.h  perfume.cpp  wav.cpp  wav.h
